# sitewide-snapshot

./: .dockerignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  manifest.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: mirror.yml
fw_gear_sitewide_snapshot/: main.py  parser.py  utils.py
fw_gear_sitewide_snapshot/fw_snapshot/: snapshot.py  snapshot_utils.py
fw_gear_sitewide_snapshot/fw_snapshots/: snapshot_utils.py  snapshotter.py
fw_gear_sitewide_snapshot/snapshot/: snapshot.py  snapshot_utils.py
fw_snapshots/: TriggerSnapshot.py  snapshot_utils.py  trigger_shapshot.py
tests/: snapshot_assets.py  test_TriggerSnapshot.py  test_main.py  test_parser.py  test_snapshot.py  test_snapshot_utils.py
