[tool.poetry]
name = "fw-gear-sitewide-snapshot"
version = "0.0.1"
description = "boop"
authors = ["Flywheel <support@flywheel.io>"]
readme = "README.md"
license = "MIT"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://gitlab.com/flywheel-io/flywheel-apps/templates/skeleton"
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.9"
flywheel-gear-toolkit = "^0.6"
flywheel-sdk = "^16.16.0"
fw-client = "^0.3.2"
pandas = "^2.1.3"
pydantic = "1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
